[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_pricing"
version = "0.1.0"
description = "Reinforcement Learning for CPG Pricing Optimization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium==0.28.1",
    "stable-baselines3==2.0.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "torch==2.0.1",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]